release/helm_vars/w24/_service_defaults/chatwoot/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatwoot
  namespace: prod
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "default"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-Proto $scheme;
      proxy_set_header X-Forwarded-Ssl on;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cs.wash24h.io
        - cs.vn01.wash24h.io
      secretName: cs-cert
  rules:
  - host: cs.wash24h.io
    http:
      paths:
        - backend:
            service:
              name: chatwoot
              port:
                number: 3000
          path: /
          pathType: Prefix
  - host: cs.vn01.wash24h.io
    http:
      paths:
        - backend:
            service:
              name: chatwoot
              port:
                number: 3000
          path: /
          pathType: Prefix
